--- a/config/config.yaml
+++ b/config/config.yaml
@@ -24,11 +24,11 @@ crawler:
 #   • 适用场景：避免重复信息干扰
 
 report:
-  mode: "daily" # 可选: "daily"|"incremental"|"current"
+  mode: "current" # 可选: "daily"|"incremental"|"current"
   rank_threshold: 10 # 排名高亮阈值
 
 notification:
-  enable_notification: true # 是否启用通知功能，如果 false，则不发送手机通知
+  enable_notification: false # 是否启用通知功能，如果 false，则不发送手机通知
   message_batch_size: 4000 # 消息分批大小（字节）(这个配置别动)
   batch_send_interval: 1 # 批次发送间隔（秒）
   feishu_message_separator: "━━━━━━━━━━━━━━━━━━━" # feishu 消息分割线
@@ -39,8 +39,8 @@ notification:
     # 如果你想寻求稳定的按时的推送，建议通过 docker 部署在个人的服务器上
     time_range:
       start: "07:00"  # 推送时间范围开始（北京时间）
-      end: "10:00"    # 推送时间范围结束（北京时间）
-    once_per_day: true  # 每天在时间范围内只推送一次，如果 false，则时间范围内每次执行都推送一次
+      end: "22:00"    # 推送时间范围结束（北京时间）
+    once_per_day: false  # 每天在时间范围内只推送一次，如果 false，则时间范围内每次执行都推送一次
     push_record_retention_days: 7  # 推送记录保留天数
 
   # 请务必妥善保管好 webhooks，不要公开
